--- a/source/makefile
+++ b/source/makefile
@@ -2,7 +2,7 @@ CC=gcc
 
 IDIR+=. ../Toy/source
 CFLAGS+=$(addprefix -I,$(IDIR)) -g -Wall -W -Wno-unused-parameter -Wno-unused-function -Wno-unused-variable
-LIBS+=-lSDL2 -lSDL2_image -L../$(BOX_OUTDIR) -ltoy -lcurses
+LIBS+=-lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -L../$(BOX_OUTDIR) -ltoy -lcurses
 
 ODIR = obj
 SRC = $(wildcard *.c)
