--- a/Box.vcxproj
+++ b/Box.vcxproj
@@ -170,7 +170,7 @@
     <ClCompile Include="source\box_node.c" />
     <ClCompile Include="source\dbg_profiler.c" />
     <ClCompile Include="source\drive_system.c" />
-    <ClCompile Include="source\lib_about.c" />
+    <ClCompile Include="source\lib_box_version_info.c" />
     <ClCompile Include="source\lib_engine.c" />
     <ClCompile Include="source\lib_input.c" />
     <ClCompile Include="source\lib_music.c" />
@@ -179,6 +179,7 @@
     <ClCompile Include="source\lib_runner.c" />
     <ClCompile Include="source\lib_sound.c" />
     <ClCompile Include="source\lib_standard.c" />
+    <ClCompile Include="source\lib_toy_version_info.c" />
     <ClCompile Include="source\repl_tools.c" />
   </ItemGroup>
   <ItemGroup>
@@ -187,7 +188,7 @@
     <ClInclude Include="source\box_node.h" />
     <ClInclude Include="source\dbg_profiler.h" />
     <ClInclude Include="source\drive_system.h" />
-    <ClInclude Include="source\lib_about.h" />
+    <ClInclude Include="source\lib_box_version_info.h" />
     <ClInclude Include="source\lib_engine.h" />
     <ClInclude Include="source\lib_input.h" />
     <ClInclude Include="source\lib_music.h" />
@@ -196,6 +197,7 @@
     <ClInclude Include="source\lib_runner.h" />
     <ClInclude Include="source\lib_sound.h" />
     <ClInclude Include="source\lib_standard.h" />
+    <ClInclude Include="source\lib_toy_version_info.h" />
     <ClInclude Include="source\repl_tools.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
